# autonomych

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  git.rs  ipc.rs  lib.rs  main.rs  store.rs  types.rs  util.rs
src-tauri/src/agents/: claude.rs  codex.rs  mod.rs  prompts.rs
src-tauri/src/conductor/: cooldown.rs  events.rs  iteration.rs  mod.rs  outputs.rs  preview.rs  preview_flow.rs  state.rs  task_runner.rs  wave.rs
src/components/: ActivityLog.tsx  BacklogPanel.tsx  ChatPanel.tsx  CreateProjectModal.tsx  Dashboard.tsx  DeleteProjectModal.tsx  ErrorBoundary.tsx  HistoryDialog.tsx  IterationHeader.tsx  PresentingOverlay.tsx  ProjectSettingsModal.tsx  QuestionModal.tsx  RenameProjectModal.tsx  RightPanel.tsx  Sidebar.tsx  StateBadge.tsx  TaskGraph.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  separator.tsx  tabs.tsx  tooltip.tsx
src/lib/: agent-models.ts  api.ts  backlog.ts  events.ts  format.ts  humanize.ts
src/state/: useApp.ts
src/styles/: global.css
